--- a/index.html
+++ b/index.html
@@ -17,14 +17,6 @@
         <div id="clock"></div>
     </div>
 
-    <script>
-        const clock = document.querySelector('#clock');
-
-        setInterval(function () {
-            let date = new Date();
-            clock.innerHTML = date.toLocaleTimeString();
-        }, 1000);
-
-    </script>
+   <script src="script.js"></script>
 </body>
 </html>
